--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="hero-bg">
-            <!-- Placeholder for Hero Image -->
-            <div class="placeholder-hero"></div> 
+            <img src="images/header.jpg">
         </div>
         <div class="hero-overlay"></div>
         <div class="container hero-content">
@@ -102,7 +101,7 @@
             <div class="contact-wrapper">
                 <div class="contact-info">
                     <h2>Let's Get In Touch!</h2>
-                    <p>Send an email or give us a call for enquires or to request for a free quotation.</p>
+                    <p>Send an email or give us a call for enquires or to request for a free quotation</p>
                     <div class="contact-item">
                         <span class="icon">📞</span>
                         <a href="tel:0220429005">022-042-9005</a>
